Fixed color om fa fa-times (X) on hamburger menu in dark mode

--- a/themes/focus/scss/style-dark.scss
+++ b/themes/focus/scss/style-dark.scss
@@ -187,7 +187,7 @@ a .site-title:hover {
 }
 
 
-.fa.fa-bars {
+.fa.fa-bars, .fa.fa-times {
     color: $nav-color;
 }
 
